# tim-ros-pkgs

./: .cproject  .gitignore  .project  README.md  current_particles.pgm  initial_particles.pgm  observation_map.pgm
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/include/wifi_localization/: AccessPoint.h  WifiData.h
devel/lib/odom_drift_corrector/: odom_drift_corrector
devel/lib/pkgconfig/: odom_drift_corrector.pc  twist_teleop.pc  wifi_localization.pc
devel/lib/python2.7/dist-packages/wifi_localization/msg/: _AccessPoint.py  _WifiData.py
devel/lib/wifi_localization/: wifi_localization
devel/share/common-lisp/ros/wifi_localization/msg/: AccessPoint.lisp  WifiData.lisp  _package.lisp  _package_AccessPoint.lisp  _package_WifiData.lisp  wifi_localization-msg.asd
devel/share/odom_drift_corrector/cmake/: odom_drift_correctorConfig.cmake
devel/share/twist_teleop/cmake/: twist_teleopConfig.cmake
devel/share/wifi_localization/cmake/: wifi_localization-msg-paths.cmake  wifi_localizationConfig.cmake
src/odom_drift_corrector/: CMakeLists.txt
src/odom_drift_corrector/exec/: odom_drift_corrector.cpp  odom_drift_corrector.cpp~
src/ros_lirc/: CMakeLists.txt  package.xml
src/ros_lirc/msg/: Lirc.msg
src/ros_lirc/scripts/: ros_lirc.py
src/twist_teleop/: CMakeLists.txt  package.xml
src/twist_teleop/exec/: twist_teleop.cpp
src/wifi_localization/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/wifi_localization/exec/: wifi_localization.cpp  wifi_mapping (tim-XPS-L412Z's conflicted copy 2014-01-16).cpp  wifi_mapping.cpp
src/wifi_localization/include/: PgmImage.h  WifiMapper.h  common.h  particle.h  utility.h
src/wifi_localization/src/: PgmImage.cpp  WifiMapper.cpp  utility.cpp
src/wifi_tools/: CMakeLists.txt  package.xml
src/wifi_tools/src/: wifi_stumbler.cpp  wifi_stumbler_node.cpp
